Fix: Corregida codificación UTF-8 - caracteres especiales (ñ, á, etc) ahora se muestran correctamente

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
   <div class="hero-content">
     <div class="hero-text">
       <h1>Diseño de Productos que Generan Resultados</h1>
-      <p>UX/UI design, product strategy y análisis de datos. Transformamos desafíos en oportunidades de crecimiento.</p>
+      <p>UX/UI design, product strategy y análisás de datos. Transformamás desafíos en oportunidadás de crecimiento.</p>
       <div class="hero-buttons">
         <button class="btn btn-primary">Ver Proyectos</button>
         <button class="btn btn-secondary">Agendar Llamada</button>
@@ -232,7 +232,7 @@
 <section class="services" id="servicios">
   <div class="section-title">
     <h2>Servicios Populares</h2>
-    <p>Transforma tu presencia digital con soluciones de UX/UI estratégico basadas en datos reales</p>
+    <p>Transforma tu presencia digital con solucionás de UX/UI estratégico basadas en datos reales</p>
   </div>
   <div class="services-grid">
     <div class="service-card">
@@ -243,12 +243,12 @@
     <div class="service-card">
       <div class="service-icon" style="background-image: url('https://images.unsplash.com/photo-1517694712202-14dd9538aa97?w=600&h=200&fit=crop');"></div>
       <h3>Product Strategy</h3>
-      <p>Análisis de datos, validación de mercado y roadmap basado en insights reales de usuarios y negocio.</p>
+      <p>análisás de datos, validación de mercado y roadmap basado en insights realás de usuarios y negocio.</p>
     </div>
     <div class="service-card">
       <div class="service-icon" style="background-image: url('https://images.unsplash.com/photo-1552664730-d307ca884978?w=600&h=200&fit=crop');"></div>
       <h3>Design System</h3>
-      <p>Componentes reutilizables, guías de diseño y tokens que escalan con tu producto a largo plazo.</p>
+      <p>Componentes reutilizables, guíás de diseño y tokens que escalan con tu producto a largo plazo.</p>
     </div>
   </div>
 </section>
@@ -264,7 +264,7 @@
       <div class="project-content">
         <span class="project-tag">App Móvil</span>
         <h3>PASEO App</h3>
-        <p>App de paseadores de mascotas con validación de identidad y tracking en tiempo real. +45K usuarios, +89% retención.</p>
+        <p>App de paseadorás de mascotas con validación de identidad y tracking en tiempo real. +45K usuarios, +89% retención.</p>
       </div>
     </div>
     <div class="project-card">
@@ -280,7 +280,7 @@
       <div class="project-content">
         <span class="project-tag" style="background: #ffe0e0;">E-Commerce</span>
         <h3>La Caroyense</h3>
-        <p>Rediseño e-commerce. ?340% conversión, ?45% abandono de carrito, +$2.1M ingresos.</p>
+        <p>Rediseño e-commerce. ?340% conversión, ?45% abandoño de carrito, +$2.1M ingresos.</p>
       </div>
     </div>
     <div class="project-card">
@@ -301,30 +301,30 @@
   </div>
   <div class="process-grid">
     <div class="process-step"><div class="step-number">1</div><h3>Discovery</h3><p>Entendemos tu negocio, usuarios y mercado mediante investigación profunda y análisis competitivo.</p></div>
-    <div class="process-step"><div class="step-number">2</div><h3>Strategy</h3><p>Definimos estrategia basada en insights, datos y oportunidades reales del mercado.</p></div>
+    <div class="process-step"><div class="step-number">2</div><h3>Strategy</h3><p>Definimos estrategia basada en insights, datos y oportunidades realás del mercado.</p></div>
     <div class="process-step"><div class="step-number">3</div><h3>Design</h3><p>Creamos prototipos interactivos y testamos con usuarios reales para validar soluciones.</p></div>
-    <div class="process-step"><div class="step-number">4</div><h3>Optimize</h3><p>Medimos impacto, iteramos y optimizamos continuamente basado en métricas reales.</p></div>
+    <div class="process-step"><div class="step-number">4</div><h3>Optimize</h3><p>Medimos impacto, iteramos y optimizamos continuamente basado en mmétricas reales.</p></div>
   </div>
 </section>
 
 <section class="testimonials">
   <div class="section-title">
     <h2>Lo que dicen nuestros clientes</h2>
-    <p>Resultados reales de productos reales</p>
+    <p>Resultados realás de productos reales</p>
   </div>
   <div class="testimonials-grid">
-    <div class="testimonial-card"><div class="rating">????? 5.0</div><p class="testimonial-text">"El trabajo de David transformó completamente nuestro producto. +78% en retención de usuarios en 3 meses. Recomendado 100%."</p><p class="testimonial-author">CEO, Startup Tech</p><p class="testimonial-role">Founder</p></div>
-    <div class="testimonial-card"><div class="rating">????? 5.0</div><p class="testimonial-text">"Excelente análisis de datos y propuestas de diseño. Nuestras métricas de usabilidad mejoraron +40% post-rediseño."</p><p class="testimonial-author">Product Manager, Enterprise</p><p class="testimonial-role">Product Lead</p></div>
-    <div class="testimonial-card"><div class="rating">????? 5.0</div><p class="testimonial-text">"+$2.1M en ingresos tras rediseño. El mejor ROI que hemos visto. Profesional, preciso y orientado a resultados."</p><p class="testimonial-author">Founder, E-commerce</p><p class="testimonial-role">CEO</p></div>
+    <div class="testimonial-card"><div class="rating">????? 5.0</div><p class="testimonial-text">"El trabaño de David transformó completamente nuestro producto. +78% en retención de usuarios en 3 meses. Recomendado 100%."</p><p class="testimonial-author">CEO, Startup Tech</p><p class="testimonial-role">Founder</p></div>
+    <div class="testimonial-card"><div class="rating">????? 5.0</div><p class="testimonial-text">"Excelente análisás de datos y propuestás de diseño. Nuestras mmétricás de usabilidad mejoraron +40% post-Rediseño."</p><p class="testimonial-author">Product Manager, Enterprise</p><p class="testimonial-role">Product Lead</p></div>
+    <div class="testimonial-card"><div class="rating">????? 5.0</div><p class="testimonial-text">"+$2.1M en ingresos tras Rediseño. El mejor ROI que hemos visto. Profesional, preciso y orientado a resultados."</p><p class="testimonial-author">Founder, E-commerce</p><p class="testimonial-role">CEO</p></div>
   </div>
 </section>
 
 <section class="faq" id="faq">
   <div class="section-title" style="max-width: 800px;"><h2>Preguntas Frecuentes</h2></div>
   <div class="faq-container">
-    <details><summary>¿Cuál es tu proceso de diseño?</summary><p>Utilizamos un proceso iterativo basado en Design Thinking: Discovery ? Strategy ? Design ? Validation ? Optimization. Cada fase está fundamentada en investigación real y datos del usuario.</p></details>
-    <details><summary>¿Cómo garantizas resultados measurables?</summary><p>Todo proyecto tiene KPIs claros desde el inicio. Medimos conversión, retención, satisfacción y ROI. Mostro los números reales, no promesas bonitas.</p></details>
-    <details><summary>¿Puedo solicitar cambios después de terminar?</summary><p>Sí. Las iteraciones basadas en feedback real son parte fundamental del proceso. Trabajamos hasta que los resultados cumplan los objetivos definidos.</p></details>
+    <details><summary>¿Cuál es tu proceño de diseño?</summary><p>Utilizamos un proceso iterativo basado en Design Thinking: Discovery ? Strategy ? Design ? Validation ? Optimization. Cada fase está fundamentada en investigación real y datás del usuario.</p></details>
+    <details><summary>¿Cómo garantizas resultados measurables?</summary><p>Todo proyecto tiene KPIs clarás desde el inicio. Medimos conversión, retención, satisfacción y ROI. Mostro los números reales, no promesas bonitas.</p></details>
+    <details><summary>¿Puedo solicitar cambiás despuás de terminar?</summary><p>Sí. Las iteraciones basadas en feedback real son parte fundamental del proceso. Trabajamos hasta que los resultados cumplan los objetivás definidos.</p></details>
     <details><summary>¿Qué herramientas utilizas?</summary><p>Figma para diseño, Python/SQL para análisis, Power BI para reporting, Git para versionamiento. Las mejores herramientas para cada fase del proyecto.</p></details>
     <details><summary>¿Trabajas con equipos remotos?</summary><p>100% remoto. Timezone flexible. Comunicación clara y documentación detallada. Estoy acostumbrado a colaborar con equipos globales.</p></details>
   </div>
@@ -337,8 +337,8 @@
   </div>
   <div class="blog-grid">
     <div class="blog-card"><div class="blog-image" style="background-image: url('https://images.unsplash.com/photo-1552664730-d307ca884978?w=800&h=200&fit=crop');"></div><div class="blog-content"><h3>Guía Completa de UX Research</h3><p>Metodologías modernas para entender realmente a tus usuarios y validar tus soluciones.</p></div></div>
-    <div class="blog-card"><div class="blog-image" style="background-image: url('https://images.unsplash.com/photo-1551288049-bebda4e38f71?w=800&h=200&fit=crop');"></div><div class="blog-content"><h3>Métricas que Importan</h3><p>Cómo medir el impacto real de tus decisiones de diseño en el negocio.</p></div></div>
-    <div class="blog-card"><div class="blog-image" style="background-image: url('https://images.unsplash.com/photo-1561070791-2526d30994b5?w=800&h=200&fit=crop');"></div><div class="blog-content"><h3>5 Errores de UX Comunes</h3><p>Y cómo evitarlos en tu próximo proyecto de diseño.</p></div></div>
+    <div class="blog-card"><div class="blog-image" style="background-image: url('https://images.unsplash.com/photo-1551288049-bebda4e38f71?w=800&h=200&fit=crop');"></div><div class="blog-content"><h3>Mmétricas que Importan</h3><p>Cómo medir el impacto real de tás decisionás de diseño en el negocio.</p></div></div>
+    <div class="blog-card"><div class="blog-image" style="background-image: url('https://images.unsplash.com/photo-1561070791-2526d30994b5?w=800&h=200&fit=crop');"></div><div class="blog-content"><h3>5 Errorás de UX Comunes</h3><p>Y cómo evitarlos en tu próximo proyecño de diseño.</p></div></div>
   </div>
 </section>
 
