Update both CTA buttons to link to contact.html

--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
   <p style="color: rgba(255,255,255,0.9); font-size: 1.1rem; margin-bottom: 40px; max-width: 600px; margin-left: auto; margin-right: auto;">Transformamos tus diseños en código limpio y funcional. Desde Figma hasta producción.</p>
   <div class="cta-buttons">
     <a href="contact.html" style="background: #fff; color: #FF6B35; padding: 14px 32px; border-radius: 8px; font-weight: 600; text-decoration: none; transition: all 0.3s; display: inline-block;">Empezar</a>
-    <a href="https://calendly.com/priteshsudra/new-meeting?month=2026-01" style="background: transparent; color: #fff; border: 2px solid #fff; padding: 14px 32px; border-radius: 8px; font-weight: 600; text-decoration: none; transition: all 0.3s; display: inline-block;">Reservar una llamada</a>
+    <a href="contact.html" style="background: transparent; color: #fff; border: 2px solid #fff; padding: 14px 32px; border-radius: 8px; font-weight: 600; text-decoration: none; transition: all 0.3s; display: inline-block;">Reservar una llamada</a>
   </div>
 </section>
 
