Fix logo link in ui-ux-design.html to navigate back to index

--- a/ui-ux-design.html
+++ b/ui-ux-design.html
@@ -562,7 +562,7 @@
   <!-- Navbar -->
   <nav>
     <div class="nav-container">
-      <div style="font-size: 1.3rem; font-weight: 700;">NeoProdUx</div>
+      <a href="index.html" style="font-size: 1.3rem; font-weight: 700; text-decoration: none; color: #000;">NeoProdUx</a>
       <div class="nav-links">
         <div class="nav-dropdown">
           <a href="#" class="dropdown-trigger">Servicios</a>
