Add blog link in footer navigation

--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
   <div class="footer-container">
     <div class="footer-section">
       <h3>Compañía</h3>
-      <ul><li><a href="#servicios">Servicios</a></li><li><a href="#proyectos">Proyectos</a></li><li><a href="#proceso">Proceso</a></li><li><a href="#faq">FAQ</a></li></ul>
+      <ul><li><a href="#servicios">Servicios</a></li><li><a href="#proyectos">Proyectos</a></li><li><a href="#proceso">Proceso</a></li><li><a href="#faq">FAQ</a></li><li><a href="#blog">Blog</a></li></ul>
     </div>
     <div class="footer-section">
       <h3>Redes</h3>
