--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
       <a href="#proyectos">Proyectos</a>
       <a href="#proceso">Proceso</a>
       <a href="#faq">FAQ</a>
-      <a href="#blog">Blog</a>
+      <a href="blog.html">Blog</a>
       <a href="#contacto" class="nav-cta">Contacto</a>
     </div>
   </div>
@@ -523,7 +523,7 @@
   <div class="footer-container">
     <div class="footer-section">
       <h3>Compañía</h3>
-      <ul><li><a href="#servicios">Servicios</a></li><li><a href="#proyectos">Proyectos</a></li><li><a href="#proceso">Proceso</a></li><li><a href="#faq">FAQ</a></li><li><a href="#blog">Blog</a></li></ul>
+      <ul><li><a href="#servicios">Servicios</a></li><li><a href="#proyectos">Proyectos</a></li><li><a href="#proceso">Proceso</a></li><li><a href="#faq">FAQ</a></li><li><a href="blog.html">Blog</a></li></ul>
     </div>
     <div class="footer-section">
       <h3>Redes</h3>
