--- a/blog-grocery-ux.html
+++ b/blog-grocery-ux.html
@@ -35,7 +35,7 @@
   <header>
     <div class="top-bar">
       <div class="brand">NeoProdUx · Blog</div>
-      <a class="pill" href="index.html#blog">Volver al blog</a>
+      <a class="pill" href="blog.html">Volver al blog</a>
     </div>
   </header>
 
