--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
     .btn-secondary { background: transparent; color: #000; border: 2px solid #000; }
     .btn-secondary:hover { background: #000; color: #fff; }
 
-    /* CAROUSEL 3D - EFECTO COVERFLOW PREMIUM */
+    /* CAROUSEL 3D - CILINDRO REAL */
     .hero-carousel {
       position: relative;
       width: 100%;
       height: 450px;
       border-radius: 20px;
       overflow: visible;
-      perspective: 1500px;
+      perspective: 900px;
       background: transparent;
     }
 
@@ -52,29 +52,29 @@
       position: relative;
       transform-style: preserve-3d;
       --angle: 0deg;
-      transform: rotateY(var(--angle)) rotateX(8deg) rotateZ(0deg);
-      transition: transform 0.8s cubic-bezier(0.4, 0, 0.2, 1);
-      filter: drop-shadow(0 30px 100px rgba(0, 0, 0, 0.25));
+      transform: rotateY(var(--angle));
+      transition: transform 0.9s cubic-bezier(0.34, 1.56, 0.64, 1);
+      filter: drop-shadow(0 40px 120px rgba(0, 0, 0, 0.4));
     }
 
     .carousel-slide {
       position: absolute;
-      width: 90%;
-      height: 90%;
-      left: 5%;
-      top: 5%;
+      width: 85%;
+      height: 85%;
+      left: 7.5%;
+      top: 7.5%;
       display: flex;
       align-items: center;
       justify-content: center;
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
-      border-radius: 16px;
-      border: 3px solid rgba(255, 255, 255, 0.2);
+      border-radius: 20px;
+      border: 2px solid rgba(255, 255, 255, 0.15);
       box-shadow:
-        0 20px 60px rgba(0, 0, 0, 0.4),
-        inset 0 0 0 1px rgba(255, 255, 255, 0.1);
-      transition: all 0.6s cubic-bezier(0.4, 0, 0.2, 1);
+        0 25px 80px rgba(0, 0, 0, 0.5),
+        inset 0 0 40px rgba(0, 0, 0, 0.1);
+      transition: all 0.9s cubic-bezier(0.34, 1.56, 0.64, 1);
       backface-visibility: hidden;
     }
 
@@ -93,44 +93,45 @@
     }
 
     .carousel-slide:nth-child(1) {
-      transform: rotateY(0deg) translateZ(420px);
+      transform: rotateY(0deg) translateZ(280px);
       z-index: 6;
       opacity: 1;
+      filter: brightness(1);
     }
 
     .carousel-slide:nth-child(2) {
-      transform: rotateY(60deg) translateZ(420px);
+      transform: rotateY(60deg) translateZ(280px);
       z-index: 5;
-      opacity: 0.95;
-      filter: brightness(0.95);
+      opacity: 0.92;
+      filter: brightness(0.88);
     }
 
     .carousel-slide:nth-child(3) {
-      transform: rotateY(120deg) translateZ(420px);
-      z-index: 4;
-      opacity: 0.9;
-      filter: brightness(0.85);
+      transform: rotateY(120deg) translateZ(280px);
+      z-index: 2;
+      opacity: 0.75;
+      filter: brightness(0.65);
     }
 
     .carousel-slide:nth-child(4) {
-      transform: rotateY(180deg) translateZ(420px);
-      z-index: 3;
-      opacity: 0.85;
-      filter: brightness(0.75);
+      transform: rotateY(180deg) translateZ(280px);
+      z-index: 1;
+      opacity: 0.6;
+      filter: brightness(0.5);
     }
 
     .carousel-slide:nth-child(5) {
-      transform: rotateY(240deg) translateZ(420px);
-      z-index: 4;
-      opacity: 0.9;
-      filter: brightness(0.85);
+      transform: rotateY(240deg) translateZ(280px);
+      z-index: 2;
+      opacity: 0.75;
+      filter: brightness(0.65);
     }
 
     .carousel-slide:nth-child(6) {
-      transform: rotateY(300deg) translateZ(420px);
+      transform: rotateY(300deg) translateZ(280px);
       z-index: 5;
-      opacity: 0.95;
-      filter: brightness(0.95);
+      opacity: 0.92;
+      filter: brightness(0.88);
     }
 
     .carousel-dots {
