--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
     .btn-secondary { background: transparent; color: #000; border: 2px solid #000; }
     .btn-secondary:hover { background: #000; color: #fff; }
 
-    /* CAROUSEL 3D - CILINDRO REAL */
+    /* CAROUSEL 3D - ESFERA REAL */
     .hero-carousel {
       position: relative;
       width: 100%;
       height: 450px;
       border-radius: 20px;
       overflow: visible;
-      perspective: 900px;
+      perspective: 800px;
       background: transparent;
     }
 
@@ -52,9 +52,9 @@
       position: relative;
       transform-style: preserve-3d;
       --angle: 0deg;
-      transform: rotateY(var(--angle));
-      transition: transform 0.9s cubic-bezier(0.34, 1.56, 0.64, 1);
-      filter: drop-shadow(0 40px 120px rgba(0, 0, 0, 0.4));
+      transform: rotateY(var(--angle)) rotateX(var(--angle-x, 0deg));
+      transition: transform 0.95s cubic-bezier(0.34, 1.56, 0.64, 1);
+      filter: drop-shadow(0 50px 150px rgba(0, 0, 0, 0.45));
     }
 
     .carousel-slide {
@@ -93,45 +93,45 @@
     }
 
     .carousel-slide:nth-child(1) {
-      transform: rotateY(0deg) translateZ(280px);
+      transform: rotateY(0deg) rotateX(0deg) translateZ(280px);
       z-index: 6;
       opacity: 1;
       filter: brightness(1);
     }
 
     .carousel-slide:nth-child(2) {
-      transform: rotateY(60deg) translateZ(280px);
-      z-index: 5;
-      opacity: 0.92;
-      filter: brightness(0.88);
+      transform: rotateY(72deg) rotateX(-35deg) translateZ(280px);
+      z-index: 4;
+      opacity: 0.85;
+      filter: brightness(0.80);
     }
 
     .carousel-slide:nth-child(3) {
-      transform: rotateY(120deg) translateZ(280px);
-      z-index: 2;
-      opacity: 0.75;
-      filter: brightness(0.65);
+      transform: rotateY(144deg) rotateX(-35deg) translateZ(280px);
+      z-index: 3;
+      opacity: 0.80;
+      filter: brightness(0.70);
     }
 
     .carousel-slide:nth-child(4) {
-      transform: rotateY(180deg) translateZ(280px);
+      transform: rotateY(180deg) rotateX(0deg) translateZ(280px);
       z-index: 1;
-      opacity: 0.6;
-      filter: brightness(0.5);
+      opacity: 0.65;
+      filter: brightness(0.55);
     }
 
     .carousel-slide:nth-child(5) {
-      transform: rotateY(240deg) translateZ(280px);
-      z-index: 2;
-      opacity: 0.75;
-      filter: brightness(0.65);
+      transform: rotateY(216deg) rotateX(35deg) translateZ(280px);
+      z-index: 3;
+      opacity: 0.80;
+      filter: brightness(0.70);
     }
 
     .carousel-slide:nth-child(6) {
-      transform: rotateY(300deg) translateZ(280px);
-      z-index: 5;
-      opacity: 0.92;
-      filter: brightness(0.88);
+      transform: rotateY(288deg) rotateX(35deg) translateZ(280px);
+      z-index: 4;
+      opacity: 0.85;
+      filter: brightness(0.80);
     }
 
     .carousel-dots {
@@ -583,7 +583,9 @@
     if (!slides.length) return;
     currentSlide = (index + slides.length) % slides.length;
     const angle = -currentSlide * angleStep;
+    const angleX = Math.sin((currentSlide / slides.length) * Math.PI * 2) * 25;
     carousel.style.setProperty('--angle', `${angle}deg`);
+    carousel.style.setProperty('--angle-x', `${angleX}deg`);
     dots.forEach((dot, idx) => dot.classList.toggle('active', idx === currentSlide));
   };
 
