--- a/index.html
+++ b/index.html
@@ -33,137 +33,54 @@
     .btn-primary { background: #000; color: #fff; }
     .btn-primary:hover { background: #333; transform: translateY(-2px); box-shadow: 0 8px 24px rgba(0, 0, 0, 0.15); }
     .btn-secondary { background: transparent; color: #000; border: 2px solid #000; }
-    .btn-secondary:hover { background: #000; color: #fff; }
+    .btn-secondary:hover { background: #000; color: #/* CAROUSEL 3D - APPLE COVERFLOW */
+.hero-carousel {
+  position: relative;
+  width: 100%;
+  height: 450px;
+  perspective: 1400px;
+  overflow: visible;
+}
 
-    /* CAROUSEL 3D - ESFERA REAL */
-    .hero-carousel {
-      position: relative;
-      width: 100%;
-      height: 450px;
-      border-radius: 20px;
-      overflow: visible;
-      perspective: 800px;
-      background: transparent;
-    }
+.carousel-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transform-style: preserve-3d;
+}
 
-    .carousel-container {
-      width: 100%;
-      height: 100%;
-      position: relative;
-      transform-style: preserve-3d;
-      --angle: 0deg;
-      transform: rotateY(var(--angle)) rotateX(var(--angle-x, 0deg));
-      transition: transform 0.95s cubic-bezier(0.34, 1.56, 0.64, 1);
-      filter: drop-shadow(0 50px 150px rgba(0, 0, 0, 0.45));
-    }
+.carousel-slide {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 320px;
+  height: 420px;
+  transform-style: preserve-3d;
+  border-radius: 22px;
+  background-size: cover;
+  background-position: center;
+  box-shadow:
+    0 40px 120px rgba(0,0,0,.35),
+    inset 0 0 0 1px rgba(255,255,255,.12);
+  transition:
+    transform 0.9s cubic-bezier(.22,.61,.36,1),
+    opacity 0.6s ease,
+    filter 0.6s ease;
+  will-change: transform;
+}
 
-    .carousel-slide {
-      position: absolute;
-      width: 85%;
-      height: 85%;
-      left: 7.5%;
-      top: 7.5%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      border-radius: 20px;
-      border: 2px solid rgba(255, 255, 255, 0.15);
-      box-shadow:
-        0 25px 80px rgba(0, 0, 0, 0.5),
-        inset 0 0 40px rgba(0, 0, 0, 0.1);
-      transition: all 0.9s cubic-bezier(0.34, 1.56, 0.64, 1);
-      backface-visibility: hidden;
-    }
-
-    .carousel-slide::before {
-      content: '';
-      position: absolute;
-      inset: 0;
-      background: linear-gradient(
-        135deg,
-        rgba(255, 255, 255, 0.1) 0%,
-        rgba(255, 255, 255, 0) 50%,
-        rgba(0, 0, 0, 0.2) 100%
-      );
-      border-radius: 16px;
-      pointer-events: none;
-    }
-
-    .carousel-slide:nth-child(1) {
-      transform: rotateY(0deg) rotateX(0deg) translateZ(280px);
-      z-index: 6;
-      opacity: 1;
-      filter: brightness(1);
-    }
-
-    .carousel-slide:nth-child(2) {
-      transform: rotateY(72deg) rotateX(-35deg) translateZ(280px);
-      z-index: 4;
-      opacity: 0.85;
-      filter: brightness(0.80);
-    }
-
-    .carousel-slide:nth-child(3) {
-      transform: rotateY(144deg) rotateX(-35deg) translateZ(280px);
-      z-index: 3;
-      opacity: 0.80;
-      filter: brightness(0.70);
-    }
-
-    .carousel-slide:nth-child(4) {
-      transform: rotateY(180deg) rotateX(0deg) translateZ(280px);
-      z-index: 1;
-      opacity: 0.65;
-      filter: brightness(0.55);
-    }
-
-    .carousel-slide:nth-child(5) {
-      transform: rotateY(216deg) rotateX(35deg) translateZ(280px);
-      z-index: 3;
-      opacity: 0.80;
-      filter: brightness(0.70);
-    }
-
-    .carousel-slide:nth-child(6) {
-      transform: rotateY(288deg) rotateX(35deg) translateZ(280px);
-      z-index: 4;
-      opacity: 0.85;
-      filter: brightness(0.80);
-    }
-
-    .carousel-dots {
-      position: absolute;
-      bottom: 20px;
-      left: 50%;
-      transform: translateX(-50%);
-      display: flex;
-      gap: 8px;
-      z-index: 10;
-    }
-
-    .dot {
-      width: 8px;
-      height: 8px;
-      border-radius: 50%;
-      background: rgba(255, 255, 255, 0.6);
-      cursor: pointer;
-      transition: all 0.3s;
-    }
-
-    .dot.active {
-      background: #fff;
-      width: 24px;
-      border-radius: 4px;
-    }
-
-    @media (prefers-reduced-motion: reduce) {
-      .carousel-container {
-        transition: none;
-      }
-    }
+.carousel-slide::after {
+  content: '';
+  position: absolute;
+  inset: 0;
+  border-radius: inherit;
+  background: linear-gradient(
+    135deg,
+    rgba(255,255,255,.12),
+    rgba(0,0,0,.25)
+  );
+  pointer-events: none;
+}
 
     .clients-section { padding: 60px 40px; background: #f9f9f9; border-top: 1px solid #e5e5e5; border-bottom: 1px solid #e5e5e5; }
     .clients-title { text-align: center; color: #999; font-size: 0.95rem; font-weight: 600; margin-bottom: 30px; letter-spacing: 0.5px; }
