Change article links to new blog URLs
Updated article links to point to new blog pages.

--- a/blog.html
+++ b/blog.html
@@ -84,7 +84,7 @@
           <div class="meta">September 1, 2025</div>
           <div class="title">7 UX Mistakes That Can Break a Grocery Delivery App | UX Solutions</div>
           <p class="excerpt">Why Grocery Delivery App UX Design Matters More Than Ever. The grocery delivery industry has evolved rapidly, and user experience can make or break your app's success.</p>
-          <a class="link" href="https://uistudioz.com/ux-mistakes-in-grocery-delivery-apps/" target="_blank">Read More →</a>
+          <a class="link" href="blog-grocery-ux.html" target="_blank">Read More →</a>
         </div>
       </article>
 
@@ -94,7 +94,7 @@
           <div class="meta">August 22, 2025</div>
           <div class="title">10 Framer Website Design Trends to Watch in 2025</div>
           <p class="excerpt">The digital landscape is evolving at breakneck speed, and web design in 2025 demands more than ever before. Discover the latest Framer trends shaping modern web experiences.</p>
-          <a class="link" href="https://uistudioz.com/framer-web-design-trends/" target="_blank">Read More →</a>
+          <a class="link" href="blog-framer-trends.html" target="_blank">Read More →</a>
         </div>
       </article>
 
@@ -104,7 +104,7 @@
           <div class="meta">July 24, 2025</div>
           <div class="title">Top Figma to HTML Conversion Tools and Plugins in 2025</div>
           <p class="excerpt">In the rapidly evolving landscape of web design and development, businesses need pixel-perfect results. They …</p>
-          <a class="link" href="https://uistudioz.com/top-figma-to-html-conversion-tools-and-plugins-in-2025/" target="_blank">Read More →</a>
+          <a class="link" href="blog-figma-to-html-tools.html" target="_blank">Read More →</a>
         </div>
       </article>
 
@@ -184,7 +184,7 @@
           <div class="meta">June 6, 2025</div>
           <div class="title">How to Design a Food Delivery App?: Top Tips from Our Team</div>
           <p class="excerpt">The food delivery industry is now worth over $150 billion globally, with countless apps competing …</p>
-          <a class="link" href="https://uistudioz.com/how-to-design-a-food-delivery-app-top-tips-from-our-team/" target="_blank">Read More →</a>
+          <a class="link" href="blog-design-food-delivery-app.html" target="_blank">Read More →</a>
         </div>
       </article>
 
@@ -204,7 +204,7 @@
           <div class="meta">March 24, 2025</div>
           <div class="title">Canva vs Figma: Which Design Tool is Right for You in 2025?</div>
           <p class="excerpt">In the ever-evolving world of digital design, two platforms consistently stand out: Canva vs Figma. …</p>
-          <a class="link" href="https://uistudioz.com/canva-vs-figma-which-design-tool-is-right-for-you-in-2025/" target="_blank">Read More →</a>
+          <a class="link" href="blog-canva-vs-figma-2025.html" target="_blank">Read More →</a>
         </div>
       </article>
 
@@ -264,7 +264,7 @@
           <div class="meta">October 8, 2024</div>
           <div class="title">Best Dashboard Design Examples: Inspiring UI/UX for Data Visualization in 2024</div>
           <p class="excerpt">Business dashboards are important tools for organizations and individual professionals in a world saturated with …</p>
-          <a class="link" href="https://uistudioz.com/best-dashboard-design-examples-inspiring-ui-ux-for-data-visualization-in-2024/" target="_blank">Read More →</a>
+          <a class="link" href="blog-dashboard-design-examples-2024.html" target="_blank">Read More →</a>
         </div>
       </article>
 
